--- a/css/style-gestion.css
+++ b/css/style-gestion.css
@@ -205,11 +205,13 @@ header .navbar{
     align-content: center;
     transition: 0.3s ease;
 }
+
 #login-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 150px; /* Espacio para el header fijo */
+  padding-top: 150px; 
+  padding-bottom: 40px;
 }
 
 #login {
